# ACompiler

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  fib.av  syntax.md
.cache/clangd/index/: arraylist.c.F60927FB56230711.idx  arraylist.h.C7DE69E836950C37.idx  detector.c.B3F99DE9AE030F85.idx  detector.h.9CD101D47AF1A287.idx  hashtable.c.B7F938890A158FB0.idx  hashtable.h.DC7ACC9926D229D5.idx  main.c.F2E26EAC8C9CE20E.idx  tokenizer.c.52B0F1BC4BDC6E71.idx  tokenizer.h.2810702E04179981.idx  tokens.h.16124B85E219D765.idx
include/assembler/: assembler.h  emitter.h
include/errors/: errors.h
include/parser/: parser.h
include/preprocess/: preprocess.h
include/tokenizer/: tokenizer.h  tokens.h
include/utils/: .hashtable.h.swp  arraylist.h  detector.h  hashtable.h  stack.h
src/: main.c  syntax.md  syntax.txt
src/assembler/: assembler.c  emitter.c
src/errors/: errors.c
src/parser/: parser.c
src/tokenizer/: tokenizer.c
src/utils/: .hashtable.c.swp  arraylist.c  detector.c  hashtable.c  stack.c
test/: test_assembler.c  test_emitter.c  test_emitter_extended.c  test_integration.c  test_parser.c  test_tokenizer.c  test_tokenizer_extended.c  test_utils.c  test_utils_extended.c
test/testprograms/: assign_expr.av  binary_expr.av  cast_expr.av  comparison.av  func_call.av  global_var.av  if_else.av  simple_func.av  unary_expr.av  var_create.av  var_decl_types.av
